--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Montserrat&display=swap');
+body{
+    background-color: #D9D7D7;
+}
+header{
+    display: inline;
+}
+img{
+    width: 100%;
+    max-width: 200px;
+    float: left;
+}
+nav{
+    padding: 0.3em 0 0.3em;
+}
 li{
     list-style: none;
     display: inline;
@@ -5,9 +21,29 @@ li{
 }
 a{
     text-decoration: none;
+    font-size: 1.1em;
+    /*font-family: "Montserrat", sans-serif;*/
+    font-family: "Josefin Sans", sans-serif;
+    color: #000;
+    padding: 0.3em;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+a:hover{
+    background-color: #8C7B6C;
+    border-radius: 25px;
+    padding: 0.3em;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 header{
     width: 100%;
-    max-width: 1280px;
+    max-width: 3840px;
     text-align: center;
 }
